# wasm-bindgen-async-method-example

./: Cargo.toml
src/: lib.rs
